added more justification for re-proving Snow's lemma
I'll close the related github issue now.

--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -1138,10 +1138,14 @@ It's not hard to see that $D \leq Xf\leq S^n$, for all $f\in \IC(n)$.
 \label{sec:union-filter-ideal}
 The lemma in this section (Lemma~\ref{lemma:union-filter-ideal})
 was originally proved by John Snow (see \cite{MR1774743} and \cite{MR2026829}),
-using primitive positive
-formulas.  Since it provides such a useful tool for proving that certain finite lattices 
-are representable as congruence lattices, we give our own direct
-proof of the result below. 
+using primitive positive formulas.  We provide an alternative proof for two reasons.
+First, the lemma is a useful tool for proving that certain finite lattices 
+are representable as congruence lattices, and providing a proof helps to keep the
+paper self-contained. More importantly, however, our proof is more direct than
+the proof via primitive positive fomulas in that we construct the algebras
+that the lemma claims exist.  For our purposes this is preferable
+since, when trying to prove that a given lattice is representable, whenever possible we 
+construct an algebra that represents it. 
 
 Before stating the lemma, we need a couple of definitions.  (These will be
 discussed in greater detail in Section~\ref{sec:closure-method}.)
